style.css
:root {
  -webkit-user-select:none;
}

h5 {
  margin-bottom: 0.15rem;
  margin-top: 0.25rem;
}

p {
  /*font-family: 'Cutive Mono', monospace;*/
  color: #000000;
  margin: 0px;
}

b {
  margin-top: 0.6rem;
}

body {
  background-color: #6A6A6A;
}

html, body, #container, .row {
  height: 100%;
}

#panel-body4 {
  height: 12vh;
}

.dropdown.show {
  position: absolute;
  z-index: 10;
}

.panel-group {
  width: 100%;
  min-width: 100%;
  max-width: 100%;
}

.panel-heading {
  background-color: #6A6A6A;
  padding: 10px;
  border: 2px solid #C0C0C0;
  border-top: 0px;
}

.panel-heading:hover {
  background-color: #999999;
}

#topHeading {
  border-top: 2px solid #C0C0C0;
}

.panel-body {
  background-color: #C0C0C0;
  padding: 10px;
  border: 2px solid #C0C0C0;
  border-top: 0px;
  width: 100%;
  overflow-x: hidden;
}

.panel-title {
  margin: 0px;
}

.accordionheader {
  color: #000000;
}

.accordionheader:hover {
  text-decoration: none;
  color: #333333;
}


#sidebar {
  background-color: #333333;
  padding: 20px;
  height: 100%;
  width: 25%;
  /*min-width: 350px;*/
  resize: horizontal;
}

#canvas_histogram {
  width: 100%;
  background-color: #6A6A6A;
  /* border: 3.5px #333333 solid; */
}

#canvas_histogram_footer {
  width: 100%;
}

#canvas_colorhistogram {
  width: 100%;
  background-color: #6A6A6A;
  /* border: 3.5px #333333 solid; */
}

#canvas_colorhistogram_footer {
  width: 100%;
}

#canvas {
  width: 100%;
  /*image-rendering: smooth;
  /*border: 20px solid #FFFFFF;*/
}

